--- a/style.css
+++ b/style.css
@@ -71,17 +71,22 @@ width: 112px;
  background: white url(./assets/sun.svg) no-repeat center;
  border: 0;
  border-radius: 50%;
+ 
  position: absolute;
  z-index: 1;
  left: 0; 
  transform: translateY(-50%);
  top: 50%;
+
+ animation: slide-back 2.s;
  }
 
  .light #switch button {
-  right: 0;
-  left: initial;
+ animation:  slide-in 0.4s forwards;
  }
+ #switch button:hover {
+  outline: 8px solid var(--highlight-color);
+   }
 
  #switch span {
   display: block;
@@ -153,4 +158,23 @@ width: 112px;
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+ }
+
+ /* animation */
+ @keyframes slide-in {
+  from {
+    left: 0;
+   }
+   to {
+    left: 50%;
+   }
+ }
+  
+ @keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
+  }
  }
