--- a/style.css
+++ b/style.css
@@ -64,11 +64,10 @@ width: 112px;
     margin: 10px auto;    
 }
 
-
 #switch button {
  width: 32px;
  height: 32px;
- background: white url(./assets/sun.svg) no-repeat center;
+ background: white var(--switch-bg-url) no-repeat center;
  border: 0;
  border-radius: 50%;
  
